parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | STRING
  14      | TUPLE
  15      | LIST

  16  vdecl_list :
  17             | vdecl_list vdecl

  18  vdecl : typ ID SEMI

  19  val_list : expr
  20           | expr COMMA val_list

  21  list_literal : LSQUARE val_list RSQUARE

  22  stmt_list :
  23            | stmt_list stmt

  24  stmt : expr SEMI
  25       | RETURN SEMI
  26       | RETURN expr SEMI
  27       | LBRACE stmt_list RBRACE
  28       | IF LPAREN expr RPAREN stmt
  29       | IF LPAREN expr RPAREN stmt ELSE stmt
  30       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  31       | WHILE LPAREN expr RPAREN stmt

  32  expr_opt :
  33           | expr

  34  expr : INT_LITERAL
  35       | FLOAT_LITERAL
  36       | STRING_LITERAL
  37       | TRUE
  38       | FALSE
  39       | ID
  40       | TUPLE_LITERAL
  41       | list_literal
  42       | expr PLUS expr
  43       | expr MINUS expr
  44       | expr TIMES expr
  45       | expr DIVIDE expr
  46       | expr EQ expr
  47       | expr NEQ expr
  48       | expr LT expr
  49       | expr LEQ expr
  50       | expr GT expr
  51       | expr GEQ expr
  52       | expr AND expr
  53       | expr OR expr
  54       | MINUS expr
  55       | NOT expr
  56       | ID ASSIGN expr
  57       | ID LPAREN actuals_opt RPAREN
  58       | ID LSQUARE expr RSQUARE ASSIGN expr
  59       | ID LSQUARE expr RSQUARE
  60       | LPAREN expr COMMA expr RPAREN
  61       | LPAREN expr RPAREN

  62  actuals_opt :
  63              | actuals_list

  64  actuals_list : expr
  65               | actuals_list COMMA expr

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (66)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (66)

	.  reduce 66


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	LIST  shift 9
	TUPLE  shift 10
	EOF  shift 11
	.  error

	vdecl  goto 12
	fdecl  goto 13
	typ  goto 14


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : STRING .  (13)

	.  reduce 13


state 9
	typ : LIST .  (15)

	.  reduce 15


state 10
	typ : TUPLE .  (14)

	.  reduce 14


state 11
	program : decls EOF .  (1)

	.  reduce 1


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (18)

	ID  shift 15
	.  error


state 15
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	LPAREN  shift 17
	.  error


state 16
	vdecl : typ ID SEMI .  (18)

	.  reduce 18


state 17
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	LIST  shift 9
	TUPLE  shift 10
	RPAREN  reduce 6

	typ  goto 18
	formals_opt  goto 19
	formal_list  goto 20


state 18
	formal_list : typ . ID  (8)

	ID  shift 21
	.  error


state 19
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 22
	.  error


state 20
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 23
	RPAREN  reduce 7


state 21
	formal_list : typ ID .  (8)

	.  reduce 8


state 22
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 24
	.  error


state 23
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	LIST  shift 9
	TUPLE  shift 10
	.  error

	typ  goto 25


state 24
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (16)

	.  reduce 16

	vdecl_list  goto 26


state 25
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 27
	.  error


state 26
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (17)
	stmt_list : .  (22)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	LIST  shift 9
	TUPLE  shift 10
	LPAREN  reduce 22
	LBRACE  reduce 22
	RBRACE  reduce 22
	LSQUARE  reduce 22
	MINUS  reduce 22
	NOT  reduce 22
	TRUE  reduce 22
	FALSE  reduce 22
	RETURN  reduce 22
	IF  reduce 22
	FOR  reduce 22
	WHILE  reduce 22
	INT_LITERAL  reduce 22
	FLOAT_LITERAL  reduce 22
	STRING_LITERAL  reduce 22
	ID  reduce 22
	TUPLE_LITERAL  reduce 22

	vdecl  goto 28
	typ  goto 29
	stmt_list  goto 30


state 27
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 28
	vdecl_list : vdecl_list vdecl .  (17)

	.  reduce 17


state 29
	vdecl : typ . ID SEMI  (18)

	ID  shift 31
	.  error


state 30
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (23)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 34
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 49
	list_literal  goto 50
	stmt  goto 51


state 31
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	.  error


state 32
	expr : LPAREN . expr COMMA expr RPAREN  (60)
	expr : LPAREN . expr RPAREN  (61)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 52
	list_literal  goto 50


state 33
	stmt : LBRACE . stmt_list RBRACE  (27)
	stmt_list : .  (22)

	.  reduce 22

	stmt_list  goto 53


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 35
	list_literal : LSQUARE . val_list RSQUARE  (21)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	val_list  goto 54
	expr  goto 55
	list_literal  goto 50


state 36
	expr : MINUS . expr  (54)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 56
	list_literal  goto 50


state 37
	expr : NOT . expr  (55)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 57
	list_literal  goto 50


state 38
	expr : TRUE .  (37)

	.  reduce 37


state 39
	expr : FALSE .  (38)

	.  reduce 38


state 40
	stmt : RETURN . SEMI  (25)
	stmt : RETURN . expr SEMI  (26)

	SEMI  shift 58
	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 59
	list_literal  goto 50


state 41
	stmt : IF . LPAREN expr RPAREN stmt  (28)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (29)

	LPAREN  shift 60
	.  error


state 42
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (30)

	LPAREN  shift 61
	.  error


state 43
	stmt : WHILE . LPAREN expr RPAREN stmt  (31)

	LPAREN  shift 62
	.  error


state 44
	expr : INT_LITERAL .  (34)

	.  reduce 34


state 45
	expr : FLOAT_LITERAL .  (35)

	.  reduce 35


state 46
	expr : STRING_LITERAL .  (36)

	.  reduce 36


state 47
	expr : ID .  (39)
	expr : ID . ASSIGN expr  (56)
	expr : ID . LPAREN actuals_opt RPAREN  (57)
	expr : ID . LSQUARE expr RSQUARE ASSIGN expr  (58)
	expr : ID . LSQUARE expr RSQUARE  (59)

	LPAREN  shift 63
	LSQUARE  shift 64
	ASSIGN  shift 65
	SEMI  reduce 39
	RPAREN  reduce 39
	RSQUARE  reduce 39
	COMMA  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIVIDE  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39
	AND  reduce 39
	OR  reduce 39


state 48
	expr : TUPLE_LITERAL .  (40)

	.  reduce 40


state 49
	stmt : expr . SEMI  (24)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 66
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 50
	expr : list_literal .  (41)

	.  reduce 41


state 51
	stmt_list : stmt_list stmt .  (23)

	.  reduce 23


state 52
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : LPAREN expr . COMMA expr RPAREN  (60)
	expr : LPAREN expr . RPAREN  (61)

	RPAREN  shift 79
	COMMA  shift 80
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 53
	stmt_list : stmt_list . stmt  (23)
	stmt : LBRACE stmt_list . RBRACE  (27)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 81
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 49
	list_literal  goto 50
	stmt  goto 51


state 54
	list_literal : LSQUARE val_list . RSQUARE  (21)

	RSQUARE  shift 82
	.  error


state 55
	val_list : expr .  (19)
	val_list : expr . COMMA val_list  (20)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	COMMA  shift 83
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	RSQUARE  reduce 19


state 56
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : MINUS expr .  (54)

	.  reduce 54


state 57
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : NOT expr .  (55)

	.  reduce 55


state 58
	stmt : RETURN SEMI .  (25)

	.  reduce 25


state 59
	stmt : RETURN expr . SEMI  (26)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 84
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error


state 60
	stmt : IF LPAREN . expr RPAREN stmt  (28)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (29)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 85
	list_literal  goto 50


state 61
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (30)
	expr_opt : .  (32)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	SEMI  reduce 32

	expr  goto 86
	list_literal  goto 50
	expr_opt  goto 87


state 62
	stmt : WHILE LPAREN . expr RPAREN stmt  (31)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 88
	list_literal  goto 50


state 63
	expr : ID LPAREN . actuals_opt RPAREN  (57)
	actuals_opt : .  (62)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	RPAREN  reduce 62

	expr  goto 89
	list_literal  goto 50
	actuals_opt  goto 90
	actuals_list  goto 91


state 64
	expr : ID LSQUARE . expr RSQUARE ASSIGN expr  (58)
	expr : ID LSQUARE . expr RSQUARE  (59)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 92
	list_literal  goto 50


state 65
	expr : ID ASSIGN . expr  (56)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 93
	list_literal  goto 50


state 66
	stmt : expr SEMI .  (24)

	.  reduce 24


state 67
	expr : expr PLUS . expr  (42)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 94
	list_literal  goto 50


state 68
	expr : expr MINUS . expr  (43)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 95
	list_literal  goto 50


state 69
	expr : expr TIMES . expr  (44)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 96
	list_literal  goto 50


state 70
	expr : expr DIVIDE . expr  (45)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 97
	list_literal  goto 50


state 71
	expr : expr EQ . expr  (46)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 98
	list_literal  goto 50


state 72
	expr : expr NEQ . expr  (47)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 99
	list_literal  goto 50


state 73
	expr : expr LT . expr  (48)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 100
	list_literal  goto 50


state 74
	expr : expr LEQ . expr  (49)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 101
	list_literal  goto 50


state 75
	expr : expr GT . expr  (50)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 102
	list_literal  goto 50


state 76
	expr : expr GEQ . expr  (51)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 103
	list_literal  goto 50


state 77
	expr : expr AND . expr  (52)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 104
	list_literal  goto 50


state 78
	expr : expr OR . expr  (53)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 105
	list_literal  goto 50


state 79
	expr : LPAREN expr RPAREN .  (61)

	.  reduce 61


state 80
	expr : LPAREN expr COMMA . expr RPAREN  (60)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	expr  goto 106
	list_literal  goto 50


state 81
	stmt : LBRACE stmt_list RBRACE .  (27)

	.  reduce 27


state 82
	list_literal : LSQUARE val_list RSQUARE .  (21)

	.  reduce 21


state 83
	val_list : expr COMMA . val_list  (20)

	LPAREN  shift 32
	LSQUARE  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	INT_LITERAL  shift 44
	FLOAT_LITERAL  shift 45
	STRING_LITERAL  shift 46
	ID  shift 47
	TUPLE_LITERAL  shift 48
	.  error

	val_list  goto 107
	expr  goto 55
	list_literal  goto 50


state 84
	stmt : RETURN expr SEMI .  (26)

	.  reduce 26


state 85
	stmt : IF LPAREN expr . RPAREN stmt  (28)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (29)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	RPAREN  shift 108
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	.  error

